--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "memory-game",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "homepage": "https://vanquiche.github.io/memory-game",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +43,9 @@
   "devDependencies": {
     "webpack": "^4.44.2",
     "webpack-cli": "^4.7.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
